--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
     <header>
+        <div class="titulo">
         <h1>Nombre titulo</h1>
+    </div>
+    <div class="opciones">
         <ul>
             <li>1</li>
             <li>2</li>
             <li>3</li>
             <li>4</li>
         </ul>
+    </div>
     </header>
 </body>
 </html>
