--- a/index.html
+++ b/index.html
@@ -22,5 +22,34 @@
         </ul>
     </div>
     </header>
+        <main>
+            <h2>contenido</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel unde voluptates alias quas laborum in suscipit iste, a est dignissimos facere praesentium. Voluptatem sed itaque dolore saepe, repellat dolor.</p>
+            <form action="" alt="esto es un form">
+                                <input type="text" class="rt" id="">
+
+
+
+
+
+            </form>
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </main>
 </body>
 </html>
