--- a/index.html
+++ b/index.html
@@ -10,46 +10,29 @@
 <body>
     <header>
         <div class="titulo">
-        <h1>Nombre titulo</h1>
-    </div>
-    <div class="opciones">
+            <h1>Nombre titulo</h1>
+        </div>
+    <nav>
         <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
         </ul>
-    </div>
+    </nav>
     </header>
         <main>
-            <h2>contenido</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel unde voluptates alias quas laborum in suscipit iste, a est dignissimos facere praesentium. Voluptatem sed itaque dolore saepe, repellat dolor.</p>
-            <form action="" alt="esto es un form">
-                                <input type="text" class="rt" id="">
-
-
-
-
-
-            </form>
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <div class="login-container">
+                <form class="login-form">
+                    <h2>Iniciar sesion</h2>
+                    <label for="email">Correo electronico</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" name="password" required>
+                    <button type="submit">Ingresar</button>
+                </form>
+            </div>
         </main>
 </body>
 </html>
