--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <div class="header-container">
         <div class="titulo">
             <h1>Nombre titulo</h1>
         </div>
@@ -21,6 +22,7 @@
             <li><a href="#">5</a></li>
         </ul>
     </nav>
+        </div>
     </header>
         <main>
             <div class="login-container">
